# fictionChat

./: .env  README.md  clearMemory.py  crew.py  main.py  pyproject.toml  run.py  splitFiction.py
config/: agents.yaml  tasks.yaml
